Refactor ConfigCodec to final class and fix entity hit result
- Rename MODID to MOD_ID across all usages for consistent naming
- Convert ConfigCodec from interface to final class, removing redundant version() method
- Make ModelViewScreen dimensions responsive to window size
- Fix y-axis bounds bug in ColoredFloatLineRenderState