@@ -46,8 +46,8 @@ public final class ModelViewScreen extends Screen {
     private static final int SIDE_PANEL_BG = 0xFF444444, CENTER_PANEL_BG = 0xFF222222;
     private static final int DEFAULT_SCALE = 80, MIN_SCALE = 16, MAX_SCALE = 1024;
     private static final int CONFIG_NAME_MAX_LENGTH = 20;
-    private final int xSize = 450, ySize = 206, middleWidth = xSize - 200, widgetWidth = (xSize - middleWidth) / 4 - 8, widgetHeight = 18, wideWidgetWidth = widgetWidth * 2 + 4, compactWidgetWidth = widgetWidth * 2 - 18;
-    private int x, y, page = 0;
+    private final int widgetWidth = 42, widgetHeight = 18, wideWidgetWidth = widgetWidth * 2 + 4, compactWidgetWidth = widgetWidth * 2 - 18;
+    private int x, y, xSize, ySize, middleWidth, page = 0;
     private InputConstants.Key modifierKey = InputConstants.getKey(ConfigFile.config().binding.screenModifierKey);
     private boolean initialized;
     private int modelScale = DEFAULT_SCALE, textureScale = DEFAULT_SCALE, layers = 0, selectionRadius = 10;
@@ -138,6 +138,9 @@ public final class ModelViewScreen extends Screen {
     @Override
     protected void init() {
         super.init();
+        xSize = Math.clamp(width - 10, 10, 450);
+        ySize = Math.clamp(height - 10, 10, 206);
+        middleWidth = Math.max(10, xSize - 200);
         x = (width - xSize) / 2;
         y = (height - ySize) / 2;
         modifierKey = InputConstants.getKey(ConfigFile.config().binding.screenModifierKey);
@@ -397,7 +400,7 @@ public final class ModelViewScreen extends Screen {
         ModelAnalyser.applyDisableConfigs(modelRecords, target, textureId, hiddenNames);
         computeFocusedPrimitives(analyser, modelRecords, textureRecords, mouseX, mouseY);
         renderCulledModels(graphics, analyser, target, modelRecords);
-        if (textureViewArea != null) renderFlattenedModels(graphics, analyser, textureRecords);
+        renderFlattenedModels(graphics, analyser, textureRecords);
     }
 
     private List<BuiltModelRecord> captureRotatedEntity(ModelAnalyser analyser, BindTarget target, LivingEntity entity) {
@@ -458,6 +461,7 @@ public final class ModelViewScreen extends Screen {
     }
 
     private void renderFlattenedModels(GuiGraphicsExtractor graphics, ModelAnalyser analyser, List<BuiltModelRecord> textureRecords) {
+        if (textureViewArea == null) return;
         int x1 = textureViewArea.left(), y1 = textureViewArea.top(), x2 = textureViewArea.right(), y2 = textureViewArea.bottom();
         GUIHelper.enableScissor(graphics, textureViewArea);
         float scale = (textureScale * textureViewArea.width()) / (float) DEFAULT_SCALE;
@@ -598,7 +602,7 @@ public final class ModelViewScreen extends Screen {
         String candidate = base;
         for (int suffix = 2; disableConfigNameExists(candidate); suffix++) {
             String suffixText = "_" + suffix;
-            int baseLength = Math.min(base.length(), Math.max(1, CONFIG_NAME_MAX_LENGTH - suffixText.length()));
+            int baseLength = Math.clamp(CONFIG_NAME_MAX_LENGTH - suffixText.length(), 1, base.length());
             candidate = base.substring(0, baseLength) + suffixText;
         }
         return candidate;
@@ -612,10 +616,10 @@ public final class ModelViewScreen extends Screen {
             if (Character.isLetterOrDigit(c)) {
                 builder.append(c);
                 lastWasSeparator = false;
-            } else if ((c == '_' || c == '-') && builder.length() > 0 && !lastWasSeparator) {
+            } else if ((c == '_' || c == '-') && !builder.isEmpty() && !lastWasSeparator) {
                 builder.append(c);
                 lastWasSeparator = true;
-            } else if (builder.length() > 0 && !lastWasSeparator) {
+            } else if (!builder.isEmpty() && !lastWasSeparator) {
                 builder.append('_');
                 lastWasSeparator = true;
             }
